examples/compiler_errors/missing_effect_io.flx
fn loud() -> Unit {
    print("hi")
}

fn main() -> Unit {
    loud()
}
